# osqp-interface

./: CMakeLists.txt  README.md  test.cpp
examples/: csc_gen_demo.cpp  demo1.cpp  demo2.cpp  param_demo.cpp  qp_demo.cpp  row_demo.cpp
include/SQP/: qp.hpp  util.hpp
include/osqp-interface/: qp.hpp  util.hpp
src/: qp.cpp  util.cpp
